5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4480/executions/1644_2703.log
== TEST (2019-04-16 10:00:08) 
-- CODE:
idade = input("Digite idade: ")
if (idade>=18) 
print ("eleitor)
-- ERROR:
File "XXXX", line 2
    if (idade>=18) 
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:00:30) 
-- CODE:
idade = input("Digite idade: ")
if (idade>= 18) 
print ("eleitor)
-- ERROR:
File "XXXX", line 2
    if (idade>= 18) 
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:00:49) 
-- CODE:
idade = input("Digite idade: ")
if idade>= 18
print ("eleitor)
-- ERROR:
File "XXXX", line 2
    if idade>= 18
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:03:01) 
-- CODE:
idade = input("Digite idade: ")
if: idade>= 18
print ("eleitor)
-- ERROR:
File "XXXX", line 2
    if: idade>= 18
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:04:10) 
-- CODE:
idade = float(input("Digite idade: "))
if: idade>= 18
print ("eleitor)
-- ERROR:
File "XXXX", line 2
    if: idade>= 18
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:05:56) 
-- CODE:
idade = float(input("Digite idade: "))
if (idade >= 18):
print ("eleitor)
-- ERROR:
File "XXXX", line 3
    print ("eleitor)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:06:19) 
-- CODE:
idade = float(input("Digite idade: "))
if (idade >= 18):
print ("eleitor")
-- ERROR:
File "XXXX", line 3
    print ("eleitor")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:09:11) 
-- CODE:
idade = float(input("Digite idade: "))
if (idade >= 18):
   print ("eleitor")
-- ERROR:
File "XXXX", line 3
    print ("eleitor")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:10:45) 
-- CODE:
idade = float(input("Digite idade: "))
if (idade >= 18):
   print ("eleitor")
else
   print ("nao_eleitor")
-- ERROR:
File "XXXX", line 4
    else
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:11:56) 
-- CODE:
idade = float(input("Digite idade: "))
if (idade >= 18):
   print ("eleitor")
else (idade < 18)
   print ("nao_eleitor")
-- ERROR:
File "XXXX", line 4
    else (idade < 18)
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:12:15) 
-- CODE:
idade = float(input("Digite idade: "))
if (idade >= 18):
   print ("eleitor")
else (idade <18)
   print ("nao_eleitor")
-- ERROR:
File "XXXX", line 4
    else (idade <18)
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:16:07) 
-- CODE:
idade = float(input("Digite idade: "))
if (idade >= 18):
   print ("eleitor")
else (idade <18):
   print ("nao_eleitor")
-- ERROR:
File "XXXX", line 4
    else (idade <18):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:17:17) 
-- CODE:
idade = float(input("Digite idade: "))
if (idade >= 18):
   print ("eleitor")
else (idade <= 18):
   print ("nao_eleitor")
-- ERROR:
File "XXXX", line 4
    else (idade <= 18):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:17:50) 
-- CODE:
idade = float(input("Digite idade: "))
if (idade >= 18):
   print ("eleitor")
else:
   print ("nao_eleitor")
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:19:06) 
-- CODE:
idade = float(input("Digite idade: "))
if (idade >= 18):
   print ("eleitor")
else:
   print ("nao_eleitor")
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:20:44) 
-- CODE:
idade = float(input("Digite idade: "))
if (idade >= 18):
   print ("eleitor")
else:
   print ("nao_eleitor")
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:21:05) 
-- CODE:
idade = float(input("Digite idade: "))
if (idade >= 18):
   print ("eleitor")
else:
   print ("nao_eleitor")
-- EXECUTION TIME:
0.149125
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
